scanner.c
/* Generated by re2c 0.13.5 on Sat May  7 13:44:18 2011 */
#line 1 "../../scanner.re"
#include <stdlib.h>
#include <stdio.h>
#include <string.h>
#include <fcntl.h>
#include <unistd.h>

#include "scanner.h"

typedef unsigned int uint;
typedef unsigned char uchar;

#define	BSIZE	4096

#define	YYCTYPE		uchar
#define	YYCURSOR	cursor
#define	YYLIMIT		s->lim
#define	YYMARKER	s->ptr
#define	YYFILL(n)	{cursor = fill(s, cursor);}

#define	RET(i)	{tokenid = i; goto retpoint;}

static
uchar *fill(Scanner *s, uchar *cursor){
	if(!s->eof) {
		uint cnt = s->tok - s->bot;
		if(cnt){
			memcpy(s->bot, s->tok, s->lim - s->tok);
			s->tok = s->bot;
			s->ptr -= cnt;
			cursor -= cnt;
			s->pos -= cnt;
			s->lim -= cnt;
		}
		if((s->top - s->lim) < BSIZE){
			uchar *buf = (uchar*) malloc(((s->lim - s->bot) + BSIZE)*sizeof(uchar));
			memcpy(buf, s->tok, s->lim - s->tok);
			s->tok = buf;
			s->ptr = &buf[s->ptr - s->bot];
			cursor = &buf[cursor - s->bot];
			s->pos = &buf[s->pos - s->bot];
			s->lim = &buf[s->lim - s->bot];
			s->top = &s->lim[BSIZE];
			free(s->bot);
			s->bot = buf;
		}
		if((cnt = read(s->fd, (char*) s->lim, BSIZE)) != BSIZE){
			s->eof = &s->lim[cnt]; *(s->eof)++ = '\n';
		}
		s->lim += cnt;
	}
	return cursor;
}

unsigned scan(Scanner *s, SourceLocation *loc){
	uchar *cursor = s->cur;
	unsigned tokenid;
	unsigned int first_line, first_column;
	
std:
	first_line = s->line;
	s->tok = cursor;
	first_column = 1 + (unsigned int)(s->tok - s->pos);
#line 75 "../../scanner.re"



#line 70 "../../scanner.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 13) YYFILL(13);
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy79;
	case '\n':	goto yy81;
	case '!':	goto yy73;
	case '"':	goto yy35;
	case '#':	goto yy77;
	case '$':	goto yy75;
	case '%':	goto yy47;
	case '&':	goto yy30;
	case '\'':
	case ';':	goto yy4;
	case '(':	goto yy65;
	case ')':	goto yy67;
	case '*':	goto yy45;
	case '+':	goto yy41;
	case ',':	goto yy59;
	case '-':	goto yy43;
	case '.':	goto yy33;
	case '/':	goto yy2;
	case '0':	goto yy28;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy32;
	case ':':	goto yy61;
	case '<':	goto yy39;
	case '=':	goto yy63;
	case '>':	goto yy37;
	case '@':	goto yy26;
	case 'A':
	case 'a':	goto yy15;
	case 'B':
	case 'H':
	case 'K':
	case 'M':
	case 'O':
	case 'Q':
	case 'V':
	case 'X':
	case 'Y':
	case 'Z':
	case 'b':
	case 'h':
	case 'k':
	case 'm':
	case 'o':
	case 'q':
	case 'v':
	case 'x':
	case 'y':
	case 'z':	goto yy25;
	case 'C':
	case 'c':	goto yy13;
	case 'D':
	case 'd':	goto yy14;
	case 'E':
	case 'e':	goto yy18;
	case 'F':
	case 'f':	goto yy20;
	case 'G':
	case 'g':	goto yy11;
	case 'I':
	case 'i':	goto yy19;
	case 'J':
	case 'j':	goto yy12;
	case 'L':
	case 'l':	goto yy10;
	case 'N':
	case 'n':	goto yy21;
	case 'P':
	case 'p':	goto yy24;
	case 'R':
	case 'r':	goto yy6;
	case 'S':
	case 's':	goto yy16;
	case 'T':
	case 't':	goto yy17;
	case 'U':
	case 'u':	goto yy23;
	case 'W':
	case 'w':	goto yy22;
	case '[':	goto yy69;
	case ']':	goto yy71;
	case '^':	goto yy49;
	case '_':	goto yy8;
	case '{':	goto yy55;
	case '|':	goto yy51;
	case '}':	goto yy57;
	case '~':	goto yy53;
	default:	goto yy83;
	}
yy2:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '*':	goto yy365;
	case '=':	goto yy363;
	default:	goto yy3;
	}
yy3:
#line 214 "../../scanner.re"
	{ RET('/'); }
#line 186 "../../scanner.c"
yy4:
	++YYCURSOR;
#line 79 "../../scanner.re"
	{ goto linecomment; }
#line 191 "../../scanner.c"
yy6:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'E':
	case 'e':	goto yy355;
	default:	goto yy170;
	}
yy7:
#line 153 "../../scanner.re"
	{
		if (commands_get_from_range(
			(const char *)s->tok,
			(const char *)cursor)) {
			
			RET(COMMAND)
		} else {
			RET(ID)
		}
	}
#line 211 "../../scanner.c"
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case '\n':
	case '\v':
	case '\f':
	case ' ':
	case '\'':
	case ';':	goto yy350;
	case '$':	goto yy171;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy169;
	default:	goto yy9;
	}
yy9:
#line 145 "../../scanner.re"
	{
		printf("%s:%d:%d: warning: identifier _ is invalid"
			" (it is used for line continuation)\n",
			s->filename, first_line, first_column);
		goto std;
	}
#line 298 "../../scanner.c"
yy10:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy339;
	case 'E':
	case 'e':	goto yy340;
	default:	goto yy170;
	}
yy11:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy331;
	default:	goto yy170;
	}
yy12:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'U':
	case 'u':	goto yy327;
	default:	goto yy170;
	}
yy13:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy315;
	case 'O':
	case 'o':	goto yy316;
	default:	goto yy170;
	}
yy14:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy291;
	case 'I':
	case 'i':	goto yy292;
	case 'O':
	case 'o':	goto yy293;
	default:	goto yy170;
	}
yy15:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy274;
	case 'S':
	case 's':	goto yy275;
	case 'U':
	case 'u':	goto yy277;
	default:	goto yy170;
	}
yy16:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy257;
	case 'T':
	case 't':	goto yy258;
	case 'U':
	case 'u':	goto yy259;
	default:	goto yy170;
	}
yy17:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'H':
	case 'h':	goto yy247;
	case 'O':
	case 'o':	goto yy248;
	case 'Y':
	case 'y':	goto yy250;
	default:	goto yy170;
	}
yy18:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'L':
	case 'l':	goto yy219;
	case 'N':
	case 'n':	goto yy220;
	default:	goto yy170;
	}
yy19:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'F':
	case 'f':	goto yy217;
	default:	goto yy170;
	}
yy20:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'O':
	case 'o':	goto yy214;
	default:	goto yy170;
	}
yy21:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':
	case 'e':	goto yy208;
	default:	goto yy170;
	}
yy22:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'A':
	case 'a':	goto yy194;
	case 'H':
	case 'h':	goto yy195;
	default:	goto yy170;
	}
yy23:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'N':
	case 'n':	goto yy177;
	case 'S':
	case 's':	goto yy178;
	default:	goto yy170;
	}
yy24:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'R':
	case 'r':	goto yy172;
	default:	goto yy170;
	}
yy25:
	yych = *++YYCURSOR;
	goto yy170;
yy26:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy168;
yy27:
#line 164 "../../scanner.re"
	{ RET(SYSVAR); }
#line 440 "../../scanner.c"
yy28:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'X':
	case 'x':	goto yy164;
	default:	goto yy141;
	}
yy29:
#line 166 "../../scanner.re"
	{ RET(ICON); }
#line 452 "../../scanner.c"
yy30:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '=':	goto yy162;
	case 'H':
	case 'h':	goto yy164;
	default:	goto yy31;
	}
yy31:
#line 209 "../../scanner.re"
	{ RET('&'); }
#line 465 "../../scanner.c"
yy32:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy141;
yy33:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '.':	goto yy127;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy128;
	default:	goto yy34;
	}
yy34:
#line 208 "../../scanner.re"
	{ RET('.'); }
#line 490 "../../scanner.c"
yy35:
	yyaccept = 4;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy36;
	default:	goto yy123;
	}
yy36:
#line 234 "../../scanner.re"
	{
		printf("%s:%d:%d: warning: unexpected character %c (0x%02X)\n",
			s->filename, first_line, first_column, *s->tok, *s->tok);
		goto std;
	}
#line 505 "../../scanner.c"
yy37:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy116;
	case '>':	goto yy118;
	default:	goto yy38;
	}
yy38:
#line 217 "../../scanner.re"
	{ RET('>'); }
#line 516 "../../scanner.c"
yy39:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '<':	goto yy112;
	case '=':	goto yy110;
	case '>':	goto yy108;
	default:	goto yy40;
	}
yy40:
#line 216 "../../scanner.re"
	{ RET('<'); }
#line 528 "../../scanner.c"
yy41:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '+':	goto yy104;
	case '=':	goto yy106;
	default:	goto yy42;
	}
yy42:
#line 212 "../../scanner.re"
	{ RET('+'); }
#line 539 "../../scanner.c"
yy43:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '-':	goto yy100;
	case '=':	goto yy102;
	case '>':	goto yy98;
	default:	goto yy44;
	}
yy44:
#line 211 "../../scanner.re"
	{ RET('-'); }
#line 551 "../../scanner.c"
yy45:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy96;
	default:	goto yy46;
	}
yy46:
#line 213 "../../scanner.re"
	{ RET('*'); }
#line 561 "../../scanner.c"
yy47:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy94;
	default:	goto yy48;
	}
yy48:
#line 215 "../../scanner.re"
	{ RET('%'); }
#line 571 "../../scanner.c"
yy49:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy92;
	default:	goto yy50;
	}
yy50:
#line 218 "../../scanner.re"
	{ RET('^'); }
#line 581 "../../scanner.c"
yy51:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy88;
	case '|':	goto yy86;
	default:	goto yy52;
	}
yy52:
#line 219 "../../scanner.re"
	{ RET('|'); }
#line 592 "../../scanner.c"
yy53:
	++YYCURSOR;
#line 198 "../../scanner.re"
	{ RET(NEQ); }
#line 597 "../../scanner.c"
yy55:
	++YYCURSOR;
#line 199 "../../scanner.re"
	{ RET('{'); }
#line 602 "../../scanner.c"
yy57:
	++YYCURSOR;
#line 200 "../../scanner.re"
	{ RET('}'); }
#line 607 "../../scanner.c"
yy59:
	++YYCURSOR;
#line 201 "../../scanner.re"
	{ RET(','); }
#line 612 "../../scanner.c"
yy61:
	++YYCURSOR;
#line 202 "../../scanner.re"
	{ RET(':'); }
#line 617 "../../scanner.c"
yy63:
	++YYCURSOR;
#line 203 "../../scanner.re"
	{ RET('='); }
#line 622 "../../scanner.c"
yy65:
	++YYCURSOR;
#line 204 "../../scanner.re"
	{ RET('('); }
#line 627 "../../scanner.c"
yy67:
	++YYCURSOR;
#line 205 "../../scanner.re"
	{ RET(')'); }
#line 632 "../../scanner.c"
yy69:
	++YYCURSOR;
#line 206 "../../scanner.re"
	{ RET('['); }
#line 637 "../../scanner.c"
yy71:
	++YYCURSOR;
#line 207 "../../scanner.re"
	{ RET(']'); }
#line 642 "../../scanner.c"
yy73:
	++YYCURSOR;
#line 210 "../../scanner.re"
	{ RET('!'); }
#line 647 "../../scanner.c"
yy75:
	++YYCURSOR;
#line 220 "../../scanner.re"
	{ RET('$'); }
#line 652 "../../scanner.c"
yy77:
	++YYCURSOR;
#line 221 "../../scanner.re"
	{ RET('#'); }
#line 657 "../../scanner.c"
yy79:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy85;
yy80:
#line 223 "../../scanner.re"
	{ goto std; }
#line 665 "../../scanner.c"
yy81:
	++YYCURSOR;
#line 226 "../../scanner.re"
	{
		if(cursor == s->eof) RET(EOI);
		s->line++;
		s->pos = cursor;
		RET(EOL);
	}
#line 675 "../../scanner.c"
yy83:
	yych = *++YYCURSOR;
	goto yy36;
yy84:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy85:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy84;
	default:	goto yy80;
	}
yy86:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy90;
	default:	goto yy87;
	}
yy87:
#line 194 "../../scanner.re"
	{ RET(XOR); }
#line 700 "../../scanner.c"
yy88:
	++YYCURSOR;
#line 187 "../../scanner.re"
	{ RET(OREQ); }
#line 705 "../../scanner.c"
yy90:
	++YYCURSOR;
#line 188 "../../scanner.re"
	{ RET(XOREQ); }
#line 710 "../../scanner.c"
yy92:
	++YYCURSOR;
#line 186 "../../scanner.re"
	{ RET(POWEQ); }
#line 715 "../../scanner.c"
yy94:
	++YYCURSOR;
#line 184 "../../scanner.re"
	{ RET(MODEQ); }
#line 720 "../../scanner.c"
yy96:
	++YYCURSOR;
#line 182 "../../scanner.re"
	{ RET(MULEQ); }
#line 725 "../../scanner.c"
yy98:
	++YYCURSOR;
#line 193 "../../scanner.re"
	{ RET(ARROW); }
#line 730 "../../scanner.c"
yy100:
	++YYCURSOR;
#line 192 "../../scanner.re"
	{ RET(DECR); }
#line 735 "../../scanner.c"
yy102:
	++YYCURSOR;
#line 181 "../../scanner.re"
	{ RET(SUBEQ); }
#line 740 "../../scanner.c"
yy104:
	++YYCURSOR;
#line 191 "../../scanner.re"
	{ RET(INCR); }
#line 745 "../../scanner.c"
yy106:
	++YYCURSOR;
#line 180 "../../scanner.re"
	{ RET(ADDEQ); }
#line 750 "../../scanner.c"
yy108:
	++YYCURSOR;
#line 197 "../../scanner.re"
	{ RET(NEQ); }
#line 755 "../../scanner.c"
yy110:
	++YYCURSOR;
#line 195 "../../scanner.re"
	{ RET(LEQ); }
#line 760 "../../scanner.c"
yy112:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy114;
	default:	goto yy113;
	}
yy113:
#line 190 "../../scanner.re"
	{ RET(LSHIFT); }
#line 770 "../../scanner.c"
yy114:
	++YYCURSOR;
#line 179 "../../scanner.re"
	{ RET(LSHIFTEQ); }
#line 775 "../../scanner.c"
yy116:
	++YYCURSOR;
#line 196 "../../scanner.re"
	{ RET(GEQ); }
#line 780 "../../scanner.c"
yy118:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '=':	goto yy120;
	default:	goto yy119;
	}
yy119:
#line 189 "../../scanner.re"
	{ RET(RSHIFT); }
#line 790 "../../scanner.c"
yy120:
	++YYCURSOR;
#line 178 "../../scanner.re"
	{ RET(RSHIFTEQ); }
#line 795 "../../scanner.c"
yy122:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy123:
	switch (yych) {
	case '\n':	goto yy124;
	case '"':	goto yy125;
	default:	goto yy122;
	}
yy124:
	YYCURSOR = YYMARKER;
	switch (yyaccept) {
	case 0: 	goto yy9;
	case 1: 	goto yy29;
	case 2: 	goto yy31;
	case 3: 	goto yy34;
	case 4: 	goto yy36;
	case 5: 	goto yy126;
	case 6: 	goto yy130;
	}
yy125:
	yyaccept = 5;
	YYMARKER = ++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '"':	goto yy122;
	default:	goto yy126;
	}
yy126:
#line 175 "../../scanner.re"
	{ RET(SCON); }
#line 829 "../../scanner.c"
yy127:
	yych = *++YYCURSOR;
	switch (yych) {
	case '.':	goto yy137;
	default:	goto yy124;
	}
yy128:
	yyaccept = 6;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy128;
	case 'E':
	case 'e':	goto yy131;
	case 'F':
	case 'f':	goto yy132;
	default:	goto yy130;
	}
yy130:
#line 171 "../../scanner.re"
	{ RET(DCON); }
#line 861 "../../scanner.c"
yy131:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '-':	goto yy134;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy135;
	default:	goto yy124;
	}
yy132:
	++YYCURSOR;
#line 172 "../../scanner.re"
	{ RET(FCON); }
#line 883 "../../scanner.c"
yy134:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy135;
	default:	goto yy124;
	}
yy135:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy135;
	case 'F':
	case 'f':	goto yy132;
	default:	goto yy130;
	}
yy137:
	++YYCURSOR;
#line 177 "../../scanner.re"
	{ RET(ELLIPSIS); }
#line 922 "../../scanner.c"
yy139:
	yyaccept = 6;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'E':
	case 'e':	goto yy154;
	default:	goto yy153;
	}
yy140:
	yyaccept = 1;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
yy141:
	switch (yych) {
	case '.':	goto yy139;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy140;
	case 'E':
	case 'e':	goto yy142;
	case 'Q':
	case 'q':	goto yy145;
	case 'U':
	case 'u':	goto yy143;
	default:	goto yy29;
	}
yy142:
	yych = *++YYCURSOR;
	switch (yych) {
	case '+':
	case '-':	goto yy149;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy150;
	default:	goto yy124;
	}
yy143:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case 'Q':
	case 'q':	goto yy147;
	default:	goto yy144;
	}
yy144:
#line 167 "../../scanner.re"
	{ RET(UCON); }
#line 984 "../../scanner.c"
yy145:
	++YYCURSOR;
#line 168 "../../scanner.re"
	{ RET(LCON); }
#line 989 "../../scanner.c"
yy147:
	++YYCURSOR;
#line 169 "../../scanner.re"
	{ RET(ULCON); }
#line 994 "../../scanner.c"
yy149:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy150;
	default:	goto yy124;
	}
yy150:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy150;
	case 'F':
	case 'f':	goto yy132;
	default:	goto yy130;
	}
yy152:
	yyaccept = 6;
	YYMARKER = ++YYCURSOR;
	if ((YYLIMIT - YYCURSOR) < 3) YYFILL(3);
	yych = *YYCURSOR;
yy153:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
